--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trademarkia-invoice-generator",
+  "name": "image-carousal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
